@@ -1,3 +1,4 @@
+* Add StateReport to Wizard
 * Allow to override ModelSQL._table
 * Allow to import backend from entry points
 * Add reversed operators to PYSON expressions
